--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -13,3 +13,7 @@
         text-align: right;
     }
 }
+
+.dropdown-divider {
+    border-top: 1px solid #495057;
+}
